--- a/public/css/ach.ultilities.css
+++ b/public/css/ach.ultilities.css
@@ -35,6 +35,19 @@
           animation: lds-dual-ring 1.2s linear infinite;
 }
 
+.lds-dual-ring-light:after {
+  content: " ";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 0px;
+  border-radius: 50%;
+  border: 2px solid white;
+  border-color: white transparent white transparent;
+  -webkit-animation: lds-dual-ring 1.2s linear infinite;
+          animation: lds-dual-ring 1.2s linear infinite;
+}
+
 @-webkit-keyframes lds-dual-ring {
   0% {
     -webkit-transform: rotate(0deg);
