authorization for admin, cashier / report page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,48 @@
-body {
-  min-height: 100vh;
-  background-color: #f5f5f5;
-  font-family: "Segoe UI", "san-serif";
+.bg-blue {
+  background-color: #6C57FF;
 }
 
-#layout {
-  display: flex;
+.bg-red {
+  background-color: #FF7F57;
+}
+
+.bg-green {
+  background-color: #22DB9C;
+}
+
+.txt-green {
+  color: #22DB9C;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #dddddd;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #929292;
+}
+
+body {
+  min-height: 100vh;
+  background-color: #ebebeb;
+  font-family: "Segoe UI", "san-serif";
 }
 
 button {
@@ -14,8 +51,8 @@ button {
   background-color: unset;
 }
 
-.bg-green {
-  background-color: #22DB9C;
+#layout {
+  display: flex;
 }
 
 header {
