--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -1,16 +1,31 @@
 
-$body-bg: #f5f5f5;
+
+$body-bg: #ebebeb;
 $dark-blue: #353057;
 $bamboo-green: #22DB9C;
+$orange: #FF7F57;
+$purple-blue: #6C57FF;
+
+
+.bg-blue { background-color: $purple-blue;}
+.bg-red { background-color: $orange;}
+.bg-green { background-color: $bamboo-green;}
+.txt-green { color: $bamboo-green;}
+
+.fw-500 { font-weight: 500; }
+
+.flex-1 { flex: 1;}
+
+/* Scrollbar */
+::-webkit-scrollbar { width: 5px; }
+::-webkit-scrollbar-track { background: transparent; }
+::-webkit-scrollbar-thumb { background: rgb(221, 221, 221); }
+::-webkit-scrollbar-thumb:hover { background: rgb(146, 146, 146); }
 
 body {
     min-height: 100vh;
     background-color: $body-bg;
     font-family: 'Segoe UI', 'san-serif';
-}
-
-#layout {
-    display: flex;
 }
 
 button {
@@ -19,7 +34,9 @@ button {
     background-color: unset;
 }
 
-.bg-green { background-color: $bamboo-green;}
+#layout {
+    display: flex;
+}
 
 header {
 
